@@ -1,5 +1,12 @@
 2004-05-19  Richard Williamson   <rjw@apple.com>
 
+        Removed extraneous tabs that were added (by XCode?).
+        
+        * DOM.subproj/DOM-compat.h:
+        * Plugins.subproj/WebScriptObject.h:
+
+2004-05-19  Richard Williamson   <rjw@apple.com>
+
         Updated header copy script to only copy if modified headers
         are different.
 
